# aella-survey-site

./: .gitignore  .mcp.json  .npmrc  BKSPublic.parquet  BKSPublic_column_notes.txt  Big Kink Survey (970k cleaned).md  CLAUDE.md  GPT 5.2 Pro output.md  META-PLAN.md  PLAN.md  package.json  playwright.config.ts  pnpm-lock.yaml  repomix-features-ux.config.json  repomix-features-ux.xml  repomix-notes.md  repomix-output.xml  tsconfig.json  vite.config.ts
.husky/: pre-commit
analysis/: META-FINDINGS.md  README.md  __init__.py  build_findings.py  explore.py  findings.json  pyproject.toml  toolkit.py
analysis/scripts/: bootstrap_cis.py
analysis/swarm/: 01-age-onset.md  02-mental-health.md  03-personality-kinks.md  04-politics-deep.md  05-gender-deep.md  06-taboo-clusters.md  07-relationships.md  08-orientation-identity.md  09-porn-media.md  10-surprises.md  11-bootstrap-cis.md  12-multivariate.md  12-multivariate.py  13-interactions.md  14-missingness.md  15-clustering.md
analysis/tests/: test_findings.py  test_toolkit.py
design-mockups/: 01-ink-and-paper.html  02-phosphor.html  03-velvet.html  04-signal.html
docs/: repomix.md  worklog.md
e2e/: capture-explore-detail.cjs  capture-explore-filters.cjs  capture-explore.cjs  capture-explore.mjs  capture-profile-relationships.mjs  columns.spec.ts  dashboard.spec.ts  explore.spec.ts  interactive-test-about.mjs  interactive-test-combobox.mjs  interactive-test-combobox2.mjs  interactive-test-combobox3.mjs  interactive-test-dashboard.mjs  interactive-test-focus.mjs  interactive-test-fresh-nav.mjs  interactive-test-href.mjs  (+17 more)
(+136 files in other folders)
